--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="SocketAddress.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UDPSocket.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
