--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -141,6 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BotLine.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MemoryBitStream.cpp" />
     <ClCompile Include="NetworkManager.cpp" />
@@ -148,7 +149,9 @@
     <ClCompile Include="UDPSocket.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BotLine.h" />
     <ClInclude Include="MemoryBitStream.h" />
+    <ClInclude Include="NetworkException.h" />
     <ClInclude Include="NetworkManager.h" />
     <ClInclude Include="SocketAddress.h" />
     <ClInclude Include="stdafx.h" />
