오브젝트 클래스 및 주소 해쉬 값 추가

--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="MemoryBitStream.h" />
     <ClInclude Include="NetworkException.h" />
     <ClInclude Include="NetworkManager.h" />
+    <ClInclude Include="BotLineObject.h" />
     <ClInclude Include="SocketAddress.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UDPSocket.h" />
