클라이언트(Jetbot) 연결 확인 및 연결 확인 신호 전송 구현

--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="NetworkException.h" />
     <ClInclude Include="NetworkManager.h" />
     <ClInclude Include="BotLineObject.h" />
+    <ClInclude Include="Packet.h" />
     <ClInclude Include="SocketAddress.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="UDPSocket.h" />
