--- a/BotLineServer/imgui.ini
+++ b/BotLineServer/imgui.ini
@@ -14,13 +14,13 @@ Size=756,292
 Collapsed=0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+Pos=633,137
+Size=520,595
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1008,217
-Size=511,398
+Pos=569,142
+Size=945,824
 Collapsed=1
 
 [Window][Example: Log]
@@ -29,8 +29,8 @@ Size=500,400
 Collapsed=0
 
 [Window][Example: Simple layout]
-Pos=676,305
-Size=790,582
+Pos=663,209
+Size=535,242
 Collapsed=0
 
 [Window][Example: Property editor]
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][Example: Auto-resizing window]
 Pos=560,274
-Size=451,267
+Size=451,114
 Collapsed=0
 
 [Window][Example: Constrained Resize]
@@ -49,8 +49,8 @@ Size=633,633
 Collapsed=0
 
 [Window][Network log]
-Pos=1096,488
-Size=647,330
+Pos=842,454
+Size=698,416
 Collapsed=0
 
 [Window][Object list]
@@ -59,8 +59,8 @@ Size=612,482
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=541,85
-Size=1231,777
+Pos=1241,19
+Size=347,748
 Collapsed=1
 
 [Window][Horizontal contents size demo window]
@@ -69,12 +69,12 @@ Size=333,323
 Collapsed=0
 
 [Window][Delete?]
-Pos=804,481
+Pos=644,391
 Size=311,118
 Collapsed=0
 
 [Window][Stacked 1]
-Pos=755,454
+Pos=756,454
 Size=409,172
 Collapsed=0
 
@@ -104,13 +104,33 @@ Size=485,509
 Collapsed=0
 
 [Window][Controller Objects]
-Pos=217,549
-Size=691,517
+Pos=89,49
+Size=748,416
 Collapsed=0
 
 [Window][JetBot Objects]
-Pos=207,313
-Size=866,467
+Pos=64,494
+Size=749,377
+Collapsed=0
+
+[Window][Jetbot Control]
+Pos=998,340
+Size=500,400
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=627,189
+Size=339,290
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=249,50
+Size=339,902
+Collapsed=0
+
+[Window][About Dear ImGui]
+Pos=423,152
+Size=570,442
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -184,4 +204,16 @@ RefScale=13
 Column 0  Width=86
 Column 1  Width=86
 Column 2  Width=86
+
+[Table][0x20DF7A63,4]
+RefScale=13
+Column 0  Width=28 Sort=0^
+Column 1  Width=63
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0xC4D01737,3]
+Column 0  Order=0
+Column 1  Order=2
+Column 2  Order=1
 
