--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="BotLine.h" />
     <ClInclude Include="BotLineServer.h" />
     <ClInclude Include="DeviceResources.h" />
+    <ClInclude Include="DialogManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -180,6 +181,7 @@
     <ClCompile Include="BotLine.cpp" />
     <ClCompile Include="BotLineServer.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
+    <ClCompile Include="DialogManager.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_demo.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
