--- a/BotLineServer/imgui.ini
+++ b/BotLineServer/imgui.ini
@@ -19,9 +19,9 @@ Size=520,595
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=923,137
+Pos=844,119
 Size=582,517
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Log]
 Pos=60,60
@@ -49,7 +49,7 @@ Size=633,633
 Collapsed=0
 
 [Window][Network log]
-Pos=857,55
+Pos=761,126
 Size=693,422
 Collapsed=0
 
@@ -59,8 +59,8 @@ Size=612,482
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=927,100
-Size=347,748
+Pos=625,79
+Size=901,748
 Collapsed=1
 
 [Window][Horizontal contents size demo window]
@@ -104,13 +104,13 @@ Size=485,509
 Collapsed=0
 
 [Window][Controller Objects]
-Pos=14,441
-Size=757,426
+Pos=93,358
+Size=675,236
 Collapsed=0
 
 [Window][JetBot Objects]
-Pos=13,17
-Size=758,421
+Pos=99,63
+Size=685,319
 Collapsed=0
 
 [Window][Jetbot Control]
@@ -131,6 +131,16 @@ Collapsed=0
 [Window][About Dear ImGui]
 Pos=423,152
 Size=570,442
+Collapsed=0
+
+[Window][Main Control]
+Pos=813,575
+Size=638,278
+Collapsed=0
+
+[Window][Xavier Objects]
+Pos=49,516
+Size=718,318
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
