--- a/BotLineServer/BotLineServer.vcxproj.filters
+++ b/BotLineServer/BotLineServer.vcxproj.filters
@@ -143,9 +143,6 @@
     <ClCompile Include="BotLineServer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="DeviceResources.cpp">
       <Filter>DirectX</Filter>
     </ClCompile>
@@ -211,6 +208,9 @@
     </ClCompile>
     <ClCompile Include="network\object\XavierObject.cpp">
       <Filter>network\object</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
+      <Filter>헤더 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
