--- a/BotLineServer/BotLineServer.vcxproj
+++ b/BotLineServer/BotLineServer.vcxproj
@@ -122,6 +122,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -151,6 +152,7 @@
     <ClInclude Include="BotLine.h" />
     <ClInclude Include="BotLineServer.h" />
     <ClInclude Include="Component.h" />
+    <ClInclude Include="Component\NetworkComponent.h" />
     <ClInclude Include="DeviceResources.h" />
     <ClInclude Include="Dialog.h" />
     <ClInclude Include="DialogManager.h" />
@@ -176,15 +178,20 @@
     <ClInclude Include="network\socket\SocketAddress.h" />
     <ClInclude Include="network\socket\UDPSocket.h" />
     <ClInclude Include="network\utility\MemoryBitStream.h" />
-    <ClInclude Include="network\utility\NetworkException.h" />
     <ClInclude Include="ObjectList.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Util\Component.h" />
+    <ClInclude Include="Util\NetworkException.h" />
+    <ClInclude Include="Util\Object\Object.h" />
+    <ClInclude Include="Util\Object\ObjectCollection.h" />
+    <ClInclude Include="Util\Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BotLine.cpp" />
     <ClCompile Include="BotLineServer.cpp" />
+    <ClCompile Include="Component\NetworkComponent.cpp" />
     <ClCompile Include="DeviceResources.cpp" />
     <ClCompile Include="DialogManager.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
@@ -212,6 +219,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Util\Object\ObjectCollection.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BotLineServer.rc" />
